--- a/test/Makefile
+++ b/test/Makefile
@@ -28,7 +28,7 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # CPPUTEST_EXE_FLAGS +=-sg "sqlite_test"
 # CPPUTEST_EXE_FLAGS +=-sg "sql_operations_test"
 # CPPUTEST_EXE_FLAGS +=-sg "sql_row_processing_test"
-CPPUTEST_EXE_FLAGS +=-sg "password_manager_test"
+# CPPUTEST_EXE_FLAGS +=-sg "password_manager_test"
 # CPPUTEST_EXE_FLAGS +=-sg "generate_invoice_pdf_test"
 # CPPUTEST_EXE_FLAGS +=-sg "generate_statement_pdf_test"
 # CPPUTEST_EXE_FLAGS +=-sg "statement_pdf_view_test"
