--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -8,21 +8,21 @@
 # the source and header files of the feautre sub branch.
 ############################################################################
 cmake_minimum_required(VERSION 3.25)
-project(target-features VERSION 0.0.1 LANGUAGES CXX C)
+project(target-controllers VERSION 0.0.1 LANGUAGES CXX C)
 
 
 file(GLOB RESULT ${PROJECT_SOURCE_DIR}/source)
 list(LENGTH RESULT FILES_IN_DIR)
 if(${FILES_IN_DIR} GREATER 0)
-        add_library(features
+        add_library(controllers
                 OBJECT
-                ${PROJECT_SOURCE_DIR}/source/email.cpp
-                ${PROJECT_SOURCE_DIR}/source/invoice_pdf.cpp
-                ${PROJECT_SOURCE_DIR}/source/statement_pdf.cpp
-                ${PROJECT_SOURCE_DIR}/source/password_manager.cpp
+                ${PROJECT_SOURCE_DIR}/source/business_info.cpp
+                ${PROJECT_SOURCE_DIR}/source/client_invoice.cpp
+                ${PROJECT_SOURCE_DIR}/source/client_register.cpp
+                ${PROJECT_SOURCE_DIR}/source/client_statement.cpp
         )
 
-        target_include_directories(features
+        target_include_directories(controllers
                 PRIVATE
                 ${PROJECT_SOURCE_DIR}/include/
                 ${CURL_INCLUDE_DIR}
@@ -35,7 +35,8 @@ if(${FILES_IN_DIR} GREATER 0)
                 ${CMAKE_SOURCE_DIR}/data/include
                 ${CMAKE_SOURCE_DIR}/storage/include
                 ${CMAKE_SOURCE_DIR}/utility/include
+                ${CMAKE_SOURCE_DIR}/features/include
         )
 else ()
-        message(STATUS "There are no files in, features/source.")
+        message(STATUS "There are no files in, controllers/source.")
 endif()
