refactor: Renamed business_page to admin_page
- updated all relevant areas of code to reflect the name change.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -15,8 +15,8 @@ if(${FILES_IN_DIR} GREATER 0)
 
         add_library(gui
                 OBJECT
+                ${PROJECT_SOURCE_DIR}/source/admin_page.cpp
                 ${PROJECT_SOURCE_DIR}/source/invoice_page.cpp
-                ${PROJECT_SOURCE_DIR}/source/business_page.cpp
                 ${PROJECT_SOURCE_DIR}/source/statement_page.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_register_page.cpp
         )
