refactor: Changed business_data to admin_data
- updated all relevant files to reflect the name change.
- Compiled and regression tested the application.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -14,11 +14,11 @@ list(LENGTH RESULT FILES_IN_DIR)
 if(${FILES_IN_DIR} GREATER 0)
         add_library(data
                 OBJECT
+                ${PROJECT_SOURCE_DIR}/source/admin_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/email_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/column_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/invoice_data.cpp
-                ${PROJECT_SOURCE_DIR}/source/business_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/pdf_invoice_data.cpp
                 ${PROJECT_SOURCE_DIR}/source/pdf_statement_data.cpp
         )
