refactor: Renamed client_register to client_model
- updated all relevant areas of code to reflect this change.
- updated client_model method arguments to follow it's interface's
  signature.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -17,8 +17,8 @@ if(${FILES_IN_DIR} GREATER 0)
         add_library(models
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/admin_model.cpp
+                ${PROJECT_SOURCE_DIR}/source/client_model.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_invoice.cpp
-                ${PROJECT_SOURCE_DIR}/source/client_register.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_statement.cpp
         )
 
