code: Serialization code
- Serialization for admin data.
- Updated the schema file.
- Updated the CMakeLists.txt file
- Updated the sqlite.h file

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -18,7 +18,7 @@ if(${FILES_IN_DIR} GREATER 0)
                 OBJECT
                 ${PROJECT_SOURCE_DIR}/source/admin_model.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_model.cpp
-                ${PROJECT_SOURCE_DIR}/source/client_invoice.cpp
+                ${PROJECT_SOURCE_DIR}/source/invoice_model.cpp
                 ${PROJECT_SOURCE_DIR}/source/client_statement.cpp
         )
 
