code: Adds admin, client, and business serialization code
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -14,16 +14,18 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # CPPUTEST_EXE_FLAGS +=-xg "email_test client_invoice_test"
 # CPPUTEST_EXE_FLAGS +=-xg "client_invoice_test"
 # CPPUTEST_EXE_FLAGS +=-sg "client_invoice_test"
+# CPPUTEST_EXE_FLAGS +=-sg "business_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "admin_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "client_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "invoice_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "pdf_invoice_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "pdf_statement_data_test"
-# CPPUTEST_EXE_FLAGS +=-sg "serialize_admin_test"
 # CPPUTEST_EXE_FLAGS +=-sg "admin_model_test"
 # CPPUTEST_EXE_FLAGS +=-sg "client_model_test"
 # CPPUTEST_EXE_FLAGS +=-sg "invoice_model_test"
-# CPPUTEST_EXE_FLAGS +=-sg "pdf_statement_data_test"
+CPPUTEST_EXE_FLAGS +=-sg "business_serialize_test"
+CPPUTEST_EXE_FLAGS +=-sg "admin_serialize_test"
+CPPUTEST_EXE_FLAGS +=-sg "client_serialize_test"
 # CPPUTEST_EXE_FLAGS +=-sg "pdf_window_test"
 # CPPUTEST_EXE_FLAGS +=-sg "sub_button_test"
 # CPPUTEST_EXE_FLAGS +=-sg "stack_test"
