code: Implemented inheritence for statement and invoice
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -18,6 +18,8 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # CPPUTEST_EXE_FLAGS +=-sg "admin_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "client_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "invoice_data_test"
+# CPPUTEST_EXE_FLAGS +=-sg "statement_data_test"
+# CPPUTEST_EXE_FLAGS +=-sg "billing_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "column_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "pdf_invoice_data_test"
 # CPPUTEST_EXE_FLAGS +=-sg "pdf_statement_data_test"
@@ -29,12 +31,13 @@ CPPUTEST_EXE_FLAGS +=-c -v
 # CPPUTEST_EXE_FLAGS +=-sg "client_serialize_test"
 # CPPUTEST_EXE_FLAGS +=-sg "column_serialize_test"
 # CPPUTEST_EXE_FLAGS +=-sg "invoice_serialize_test"
+CPPUTEST_EXE_FLAGS +=-sg "statement_serialize_test"
 # CPPUTEST_EXE_FLAGS +=-sg "pdf_window_test"
 # CPPUTEST_EXE_FLAGS +=-sg "sub_button_test"
 # CPPUTEST_EXE_FLAGS +=-sg "stack_test"
 # CPPUTEST_EXE_FLAGS +=-sg "gui_part_search_bar"
 # CPPUTEST_EXE_FLAGS +=-sg "gui_part_button"
-CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
+# CPPUTEST_EXE_FLAGS +=-sg "invoice_pdf_view_test"
 # CPPUTEST_EXE_FLAGS +=-sg "statement_page_test"
 # CPPUTEST_EXE_FLAGS +=-sg "gui_part_dialog"
 # CPPUTEST_EXE_FLAGS +=-sg "page_range_test"
