code: Fixed cmake target name
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,13 +31,14 @@ option(STATIC_CODE_ANALYSIS "Perform static code analysis" OFF)
 option(CODE_COVERAGE "Perform code coverage" OFF)
 
 
-if(BUILD_PROJECT_FOR_DEPLOY)
-    project(${CMAKE_PROJECT_NAME}${CMAKE_PROJECT_VERSION}${CMAKE_EXECUTABLE_SUFFIX} LANGUAGES CXX C ASM)
-    message("Building the project with a version tag")
-else()
-    project(${CMAKE_PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX} LANGUAGES CXX C ASM)
-    message("Building the project without any version tag")
-endif()
+# if(BUILD_PROJECT_FOR_DEPLOY)
+#     project(${CMAKE_PROJECT_NAME}${CMAKE_PROJECT_VERSION}${CMAKE_EXECUTABLE_SUFFIX} LANGUAGES CXX C ASM)
+#     message("Building the project with a version tag")
+# else()
+#     message("Building the project without any version tag")
+# endif()
+set(APP_NAME "mint-bill")
+project(${APP_NAME} LANGUAGES CXX C ASM)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 23)
