code: Making the file paths agile
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,11 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 set(APP_DATA_DIR "share/${APP_ID}")
+set(MINTBILL_UI_PATH_DEFAULT  "${CMAKE_SOURCE_DIR}/gui/mint-bill.ui")
+set(MINTBILL_CSS_PATH_DEFAULT "${CMAKE_SOURCE_DIR}/gui/mint-bill.css")
+
+set(MINTBILL_UI_PATH  "${MINTBILL_UI_PATH_DEFAULT}"  CACHE STRING "Path to main UI file")
+set(MINTBILL_CSS_PATH "${MINTBILL_CSS_PATH_DEFAULT}" CACHE STRING "Path to CSS file")
 
 if(BUILD_PROJECT)
         find_package(CURL REQUIRED)
@@ -72,6 +77,8 @@ if(BUILD_PROJECT)
                 $<$<CONFIG:DEBUG>:TRACE_ENABLED>
 		SQLITE_HAS_CODEC=1
 		MINT_BILL_APP_ID="${APP_ID}"
+		MINTBILL_UI_PATH="${MINTBILL_UI_PATH}"
+		MINTBILL_CSS_PATH="${MINTBILL_CSS_PATH}"
         )
 
 	add_executable(${PROJECT_NAME}
@@ -187,8 +194,9 @@ if(BUILD_PROJECT)
 
 	if (INSTALL_APPLICATION)
 		install(FILES
-			${CMAKE_SOURCE_DIR}/gui/mint-bill.css
-			${CMAKE_SOURCE_DIR}/gui/mint-bill.ui
+			${CMAKE_CURRENT_SOURCE_DIR}/mint-bill.db
+			${CMAKE_CURRENT_SOURCE_DIR}/gui/mint-bill.css
+			${CMAKE_CURRENT_SOURCE_DIR}/gui/mint-bill.ui
 			DESTINATION ${APP_DATA_DIR}
 		)
 
