code: fixed db path for flatpak
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,11 @@ set(CMAKE_VERBOSE_MAKEFILE OFF)
 set(APP_DATA_DIR "share/${APP_ID}")
 set(MINTBILL_UI_PATH_DEFAULT  "${CMAKE_SOURCE_DIR}/gui/mint-bill.ui")
 set(MINTBILL_CSS_PATH_DEFAULT "${CMAKE_SOURCE_DIR}/gui/mint-bill.css")
+set(MINTBILL_DB_PATH_DEFAULT "${CMAKE_SOURCE_DIR}/mint-bill.db" CACHE STRING "Database path (relative to user data dir)")
 
 set(MINTBILL_UI_PATH  "${MINTBILL_UI_PATH_DEFAULT}"  CACHE STRING "Path to main UI file")
 set(MINTBILL_CSS_PATH "${MINTBILL_CSS_PATH_DEFAULT}" CACHE STRING "Path to CSS file")
+set(MINTBILL_DB_PATH "${MINTBILL_DB_PATH_DEFAULT}" CACHE STRING "Path to DB file")
 
 if(BUILD_PROJECT)
         find_package(CURL REQUIRED)
@@ -79,6 +81,7 @@ if(BUILD_PROJECT)
 		MINT_BILL_APP_ID="${APP_ID}"
 		MINTBILL_UI_PATH="${MINTBILL_UI_PATH}"
 		MINTBILL_CSS_PATH="${MINTBILL_CSS_PATH}"
+		MINTBILL_DB_PATH="${MINTBILL_DB_PATH}"
         )
 
 	add_executable(${PROJECT_NAME}
