code: Removed debug print
Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ if(BUILD_PROJECT)
 		MINT_BILL_APP_ID="${APP_ID}"
 		MINTBILL_UI_PATH="${MINTBILL_UI_PATH}"
 		MINTBILL_CSS_PATH="${MINTBILL_CSS_PATH}"
-		MINTBILL_DB_PATH="${MINTBILL_DB_PATH}"
+		MINTBILL_DB_PATH=\"${MINTBILL_DB_PATH}\"
         )
 
 	add_executable(${PROJECT_NAME}
